force-app/main/default/objects/P2C_EnhancedListviewAction__c/P2C_EnhancedListviewAction__c.object-meta.xml
<CustomObject>
    <label>Enhanced Listview Action</label>
    <nameField>
        <label>P2C_EnhancedListviewAction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Enhanced Listview actions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>