force-app/main/default/objects/P2C_EnhancedListviewAction__c/fields/FlowApiName__c.field-meta.xml
<CustomField>
    <fullName>FlowApiName__c</fullName>
    <label>Flow Api Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>