force-app/main/default/objects/P2C_EnhancedListviewAction__c/fields/ShowActionWhen__c.field-meta.xml
<CustomField>
    <fullName>ShowActionWhen__c</fullName>
    <label>Show action when</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Always</fullName>
                <default>true</default>
                <label>Always</label>
            </value>
            <value>
                <fullName>One record is selected</fullName>
            </value>
            <value>
                <fullName>One or more records are selected</fullName>
            </value>
            <value>
                <fullName>More than one record is selected</fullName>
            </value>
            <value>
                <fullName>Admins Only</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>